cmake_minimum_required(VERSION 3.24)
project(kw5)

set(CMAKE_CXX_STANDARD 17)

add_executable(kw5 main.cpp base.cpp base.h base.h base.cpp base.cpp base.cpp controlPanelClass.cpp controlPanelClass.h floorClass.cpp floorClass.h inputClass.cpp inputClass.h liftClass.cpp liftClass.h outputClass.cpp outputClass.h passengerClass.cpp passengerClass.h systemClass.cpp systemClass.h)
