cmake_minimum_required(VERSION 3.24)
project(kw5)

set(CMAKE_CXX_STANDARD 17)

add_executable(kw5 main.cpp cl_base.cpp cl_base.h cl_base.h cl_base.cpp cl_base.cpp cl_base.cpp control_panel.cpp control_panel.h floor.cpp floor.h input.cpp input.h lift.cpp lift.h outputs.cpp outputs.h passenger.cpp passenger.h system.cpp system.h)
